# Financial-analyzer

./: .gitignore  CMakeLists.txt  Financial-Analyzer.sln  README.md
Header/: BalanceSheet.h  CLIParser.h  CashFlow.h  FAException.h  IncStatement.h  IncomeStatement.h  InputException.h  Interval.h  Metric.h  ParserException.h  Puller.h  Scorer.h  ScorerUtils.h  Statements.h  Stock.h  StockUtils.h
Header/Metric/: AdjustedTotalDebtShareHolderEquityRatio_MY.h  AdjustedTotalDebtShareHolderEquityRatio_SY.h  CapexMargin_MY.h  CapexMargin_SY.h  CashFlowInvestingOperations_MY.h  CashFlowInvestingOperations_SY.h  CashFlowOperatingActivites_MY.h  CashFlowOperatingActivites_SY.h  DebtRatio_MY.h  DebtRatio_SY.h  Depreciation_MY.h  Depreciation_SY.h  EarningsGrowth_MY.h  Goodwill_MY.h  GrossProfitMargin_SY.h  IS_SY_Debt.h  InterestExpense_MY.h  InterestExpense_SY.h  LongTermDebtEarningsRatio_MY.h  Metric.h  MetricMY.h  MetricSY.h  NegativeEarnings_MY.h  NetEarningsOverRevenue_MY.h  NetEarnings_MY.h  OperatingExpenses_MY.h  PPEDebtRatio_MY.h  PPEDebtRatio_SY.h  PreferredStock_MY.h  PreferredStock_SY.h  RND_MY.h  RND_SY.h  ReturnOnTotalAsset_MY.h  ReturnOnTotalAsset_SY.h  SGA_MY.h  SGA_SY.h  SellingAndBuyingStock_MY.h  ShortLongTermDebtRatio_MY.h  ShortLongTermDebtRatio_SY.h  TotalCurrentRatio_MY.h  (+3 more)
Header/Parser/: CLIParser.h  Commands.h  ParseAllCmd.h  ParseCategoryCmd.h  ParseHelpCmd.h  ParseMetricCmd.h  ParserUtils.h
Include/: ._CLI11.hpp  libcurl.lib
Include/boost_1_81_0/libs/boost_program_options-vc143.1.81.0/: .signature.p7s
Include/boost_1_81_0/libs/boost_program_options-vc143.1.81.0/lib/native/: boost_program_options-vc143-mt-gd-x32-1_81.lib  boost_program_options-vc143-mt-x32-1_81.lib  libboost_program_options-vc143-mt-s-x32-1_81.lib  libboost_program_options-vc143-mt-x32-1_81.lib
Include/boost_1_81_0/libs/program_options/example/: ._multiple_sources.cpp  ._option_groups.cpp
Include/boost_lite/lib/program_options/example/: ._first.cpp  ._options_description.cpp
Project1/: Project1.vcxproj
files/: bal_sheet.json
files/AMZN/: cash_flow.json  inc_stmt.json
files/TSLA/: bal_sheet.json  cash_flow.json  inc_stmt.json
main/: BalanceSheet.cpp  CLIParser.cpp  CLIParser.h  CMakeLists.txt  CashFlow.cpp  FAException.h  IncomeStatement.cpp  ParserException.h  Puller.cpp  Scorer.cpp  Statements.h  Stock.cpp  main.cpp  main.vcxproj  main.vcxproj.filters
main/Metric/: AdjustedTotalDebtShareHolderEquityRatio_MY.cpp  AdjustedTotalDebtShareHolderEquityRatio_SY.cpp  CMakeLists.txt  CapexMargin_MY.cpp  CapexMargin_SY.cpp  CashFlowInvestingOperations_MY.cpp  CashFlowInvestingOperations_SY.cpp  CashFlowOperatingActivites_MY.cpp  CashFlowOperatingActivites_SY.cpp  DebtRatio_MY.cpp  DebtRatio_SY.cpp  Depreciation_MY.cpp  Depreciation_SY.cpp  EarningsGrowth_MY.cpp  Goodwill_MY.cpp  GrossProfitMargin_SY.cpp  IS_SY_Debt.cpp  InterestExpense_MY.cpp  InterestExpense_MYcpp.cpp  InterestExpense_SY.cpp  LongTermDebtEarningsRatio_MY.cpp  NegativeEarnings_MY.cpp  NetEarningsOverRevenue_MY.cpp  NetEarnings_MY.cpp  OperatingExpenses_MY.cpp  PPEDebtRatio_MY.cpp  PPEDebtRatio_SY.cpp  PreferredStock_MY.cpp  PreferredStock_SY.cpp  RND_MY.cpp  RND_SY.cpp  ReturnOnTotalAsset_MY.cpp  ReturnOnTotalAsset_SY.cpp  SGA_MY.cpp  SGA_SY.cpp  SellingAndBuyingStock_MY.cpp  ShortLongTermDebtRatio_MY.cpp  ShortLongTermDebtRatio_SY.cpp  TotalCurrentRatio_MY.cpp  TotalCurrentRatio_SY.cpp  (+2 more)
main/Parser/: CLIParser.cpp  CMakeLists.txt  ParseAllCmd.cpp  ParseCategoryCmd.cpp  ParseHelpCmd.cpp  ParseMetricCmd.cpp
main/Storage/: CMakeLists.txt  Connection.cpp
notes/: CLIParser Information.md  CLIParser Information.txt  Financial Statement Analysis.txt  USERGUIDE.md
